force-app/main/default/objects/Enterprise_Form_Question__mdt.object
<CustomObject>
    <description>Form Question meta data to organise Questions being used on Monash forms</description>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GE</fullName>
                    <default>true</default>
                    <label>GE</label>
                </value>
                <value>
                    <fullName>IP</fullName>
                </value>
                <value>
                    <fullName>IC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>MultiPicklist</fullName>
                </value>
                <value>
                    <fullName>RadioGroup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Please ensure to separate values using semicolon symbol</description>
        <inlineHelpText>Please ensure to separate values using semicolon symbol</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Enterprise Form Question</label>
    <listViews>
        <fullName>IC_Questions</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Group__c</columns>
        <columns>Question__c</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>IC</value>
        </filters>
        <label>IC Questions</label>
    </listViews>
    <listViews>
        <fullName>IP_Questions</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Group__c</columns>
        <columns>Question__c</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>IP</value>
        </filters>
        <label>IP Questions</label>
    </listViews>
    <pluralLabel>Enterprise Form Questions</pluralLabel>
</CustomObject>